# ConnectFour-GUI-Cpp

./: .gitignore  App.cpp  App.h  CMakeLists.txt  GameModeDialog.cpp  GameModeDialog.h  LICENSE  MainFrame.cpp  MainFrame.h  README.md
